examples/test/testpolicy2078.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2078
  namespace: namespace28
spec:
  podSelector:
    matchLabels:
      key45: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value22
          key7: value10
      podSelector:
        matchLabels:
          key11: value31
          key4: value18
          key45: value15
